Install the illuminate/collections package

--- a/07-meet-composer/composer.json
+++ b/07-meet-composer/composer.json
@@ -6,7 +6,9 @@
             "email": "doggymint@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "illuminate/collections": "^11.2"
+    },
     "autoload": {
         "psr-4": {
             "Core\\": "Core/",
